--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "start:production": "node ./bin/www",
     "build": "node psql-setup-script.js",
     "dev": "nodemon ./bin/www",
-    "fix_deploy": "node -e \"const models = require('./db/models'); models.sequelize.query('SET search_path TO airbnb_schema, public').then(function() { console.log('Schema path set!'); const exec = require('child_process').exec; exec('npx sequelize-cli db:migrate', function(err, stdout) { if(err) { console.log('ERROR:', err); } else { console.log(stdout); console.log('MIGRATIONS DONE!'); } }) })\""
+    "fix_deploy": "node -e \"const models = require('./db/models'); models.sequelize.query('SET search_path TO airbnb_schema, public').then(function() { console.log('Schema path set!'); models.sequelize.query('CREATE TABLE IF NOT EXISTS \"airbnb_schema\".\"Users\" (\"id\" SERIAL PRIMARY KEY, \"username\" VARCHAR(30) NOT NULL UNIQUE, \"email\" VARCHAR(256) NOT NULL UNIQUE, \"hashedPassword\" BYTEA NOT NULL, \"firstName\" VARCHAR(255), \"lastName\" VARCHAR(255), \"createdAt\" TIMESTAMP WITH TIME ZONE NOT NULL, \"updatedAt\" TIMESTAMP WITH TIME ZONE NOT NULL)').then(function() { console.log('Users table created!'); const exec = require('child_process').exec; exec('npx sequelize-cli db:migrate', function(err, stdout) { if(err) { console.log('ERROR:', err); } else { console.log(stdout); console.log('MIGRATIONS DONE!'); } }) }) })\""
   },
   "keywords": [],
   "author": "",
